--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -6,6 +6,7 @@
 @import "antd-steps.less";
 @import "antd-tabs.less";
 @import "antd-menu.less";
+@import "antd-alert.less";
 
 // Fix wrong flex direction of main layout.
 .ant-layout.ant-layout-has-sider {
