Fix word and character count

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -19,7 +19,7 @@
   --alert-icon-color: #0d141f;
 
   // header
-  --header-background-color: #0d141f;
+  --header-background-color: #0a1323;
   --header-menu-item-active-background: #1f2b4a;
 
   // button
