Switch to sidebars, fix some wordpress integation issues

--- a/app/assets/stylesheets/externals/antd-menu.less
+++ b/app/assets/stylesheets/externals/antd-menu.less
@@ -8,6 +8,10 @@
     border-right-color: var(--main-sidebar-border-color);
   }
 
+  .ant-menu-submenu > .ant-menu {
+    background: transparent;
+  }
+
   .ant-menu-item > a {
     color: var(--main-sidebar-color);
 
