Improve placeholder highlighting

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -13,6 +13,9 @@
   --color-success: #52c41a;
   --color-warn: #ff861d;
 
+  // mark
+  --mark-background-color: #ffd6b6;
+
   // alert
   --alert-background-color: #f0f6ff;
   --alert-border-color: #bad2ff;
@@ -69,6 +72,9 @@
   --color-passive: #555;
   --color-passive-hover: #999;
   --color-warn: #ff861d;
+
+  // mark
+  --mark-background-color: #ff743fbf;
 
   // alert
   --alert-background-color: #101929;
