--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -49,6 +49,12 @@ footer {
   }
 }
 
+mark {
+  color: transparent;
+  background-color: var(--mark-background-color) !important;
+  padding: 0px !important;
+}
+
 .fade-in {
   animation: fade-in .3s;
 }
