Add support for custom subscriptions

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -12,6 +12,7 @@
   --color-passive-hover: #333;
   --color-success: #52c41a;
   --color-warn: #ff861d;
+  --color-golden: #d5bc00;;
 
   // alert
   --alert-background-color: #f0f6ff;
@@ -69,6 +70,7 @@
   --color-passive: #555;
   --color-passive-hover: #999;
   --color-warn: #ff861d;
+  --color-golden: #fff900;
 
   // alert
   --alert-background-color: #101929;
