--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -8,6 +8,7 @@
 @import "antd-menu.less";
 @import "antd-alert.less";
 @import "antd-typography.less";
+@import "antd-drawer.less";
 
 // Fix wrong flex direction of main layout.
 .ant-layout.ant-layout-has-sider {
