Add background jobs

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -13,7 +13,7 @@
   --color-passive: #aaa;
   --color-passive-hover: #333;
   --color-success: #52c41a;
-  --color-warn: #ff861d;
+  --color-warn: #e84b00;
   --color-golden: #d5bc00;
 
   // drawer
@@ -44,8 +44,6 @@
   --input-border-disabled-color: #d9d9d9;
   --error-color: #cc3d3f;
   --error-color-hover: #ff4d4f;
-  --color-success: #52c41a;
-  --color-warn: #e87800;
 
   // popover
   --popover-background-color: #fff;
@@ -84,7 +82,7 @@
   --background-highlight-color: #177ddc1a;
   --color-passive: #555;
   --color-passive-hover: #999;
-  --color-warn: #ff861d;
+  --color-warn: #e84b00;
   --color-golden: #fff900;
 
   // drawer
