--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -66,6 +66,15 @@ footer {
   to   { opacity: 1; }
 }
 
+@keyframes rotating {
+  from {
+      transform: rotate(0deg);
+  }
+  to {
+      transform: rotate(360deg);
+  }
+}
+
 .no-transition {
   * {
     transition: none !important;
