Add background job event handling

--- a/app/assets/stylesheets/externals/antd-popover.less
+++ b/app/assets/stylesheets/externals/antd-popover.less
@@ -46,5 +46,11 @@
   .ant-popover-arrow {
     border-top-color: var(--popover-background-color) !important;
     border-left-color: var(--popover-background-color) !important;
-}
+  }
+
+  .ant-popover-placement-bottom > .ant-popover-content > .ant-popover-arrow,
+  .ant-popover-placement-bottomLeft > .ant-popover-content > .ant-popover-arrow,
+  .ant-popover-placement-bottomRight > .ant-popover-content > .ant-popover-arrow {
+    top: 7px;
+  }
 }
