--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -102,7 +102,7 @@
   // same as for light mode
 
   // button
-  --primary-btn-color: #065baa;
+  --primary-btn-color: #177ddc;
   --primary-btn-hover-color: #2286e4;
 
   // input
