Add WIP plural support

--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -102,6 +102,7 @@
   .ant-modal-title {
     font-size: 22px;
     line-height: 40px;
+    padding-right: 32px;
   }
 
   .ant-table-tbody .ant-form-item-control {
