--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,13 +1,12 @@
 :root {
   --full-color: #000;
   --background-color: #fff;
-  --dark-color: #0a111e;
+  --dark-color: #06101f;
   --border-color: #d9d9d9;
   --border-color-flashier: #777;
   --blue-color: #568aea;
   --highlight-color: #000;
   --highlight-color-decent: #f0f0f0;
-  --header-background-color: var(--dark-color);
   --primary-light-color: #e3eaff;
   --background-highlight-color: #1c70f51a;
   --color-passive: #aaa;
@@ -33,7 +32,7 @@
   --alert-icon-color: #0d141f;
 
   // header
-  --header-background-color: #0a1323;
+  --header-background-color: var(--dark-color);
   --header-menu-item-active-background: #1f2b4a;
 
   // button
@@ -59,7 +58,7 @@
   --main-sidebar-active-background-color: transparent;
   --main-sidebar-active-color: #000;
   --main-sidebar-hover-color: #000;
-  --main-sidebar-color: #c7c7c7;
+  --main-sidebar-color: rgba(0, 0, 0, 0.45);
   --main-sidebar-border-color: #555;
 
   // sub sidebar
@@ -72,7 +71,10 @@
   --sidebar-border-color: #e6e6e6;
 
   // progress bar
-  --progressbar-success-background-color: #3ffe75;
+  --progressbar-success-background-color: var(--color-success);
+
+  // breadcrumbs
+  --breadcrumbs-color: rgba(0, 0, 0, 0.45);
 }
 
 .dark-theme {
@@ -142,4 +144,10 @@
   --sidebar-item-color-hover: #fff;
   --sidebar-background-color: var(--background-color);
   --sidebar-border-color: var(--border-color);
+
+  // progress bar
+  --progressbar-success-background-color: #3ffe75;
+
+  // breadcrumbs
+  --breadcrumbs-color: rgba(255, 255, 255, 0.45);
 }
