--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -168,40 +168,40 @@
 
   .ant-progress-success-bg,
   .ant-progress-bg {
-    background: var(--blue-color);
+    background: var(--color-primary);
   }
 
   // Fix checkbox color
   .ant-checkbox-wrapper:hover .ant-checkbox-inner,
   .ant-checkbox:hover .ant-checkbox-inner,
   .ant-checkbox-input:focus + .ant-checkbox-inner {
-    border-color: var(--blue-color);
+    border-color: var(--color-primary);
   }
 
   .ant-checkbox-checked .ant-checkbox-inner {
-    background: var(--blue-color);
-    border-color: var(--blue-color);
+    background: var(--color-primary);
+    border-color: var(--color-primary);
   }
 
   .ant-checkbox-checked::after {
-    border-color: var(--blue-color);
+    border-color: var(--color-primary);
   }
 
   // Fix copy icon
   .ant-typography-expand:not(.ant-typography-copy-success),
   .ant-typography-edit:not(.ant-typography-copy-success),
   .ant-typography-copy:not(.ant-typography-copy-success) {
-    color: var(--blue-color-light);
+    color: var(--color-primary-light);
 
     &:hover {
-      color: var(--blue-color);
+      color: var(--color-primary);
     }
   }
 
   // Fix timeline
   .ant-timeline-item-head-blue {
-    color: var(--blue-color);
-    border-color: var(--blue-color);
+    color: var(--color-primary);
+    border-color: var(--color-primary);
   }
 
   // Fix select
@@ -250,11 +250,11 @@
   // Fix slider
   .ant-slider-track,
   .ant-slider:hover .ant-slider-track {
-    background: var(--blue-color);
+    background: var(--color-primary);
   }
 
   .ant-slider-handle {
-    border-color: var(--blue-color) !important;
+    border-color: var(--color-primary) !important;
   }
 
   .ant-input {
@@ -269,47 +269,8 @@
     opacity: 1;
   }
 
-  .ant-pagination-item {
-    a {
-      color: rgba(255, 255, 255, 0.65);
-    }
-
-    &:hover,
-    &:focus {
-      border-color: var(--input-border-hover-color);
-
-      a {
-        color: var(--input-border-hover-color);
-      }
-    }
-  }
-
-  .ant-pagination-prev,
-  .ant-pagination-next {
-    &:hover .ant-pagination-item-link {
-      border-color: var(--input-border-focus-color);
-      color: var(--input-border-focus-color);
-    }
-  }
-
-  .ant-pagination-item-active {
-    border-color: var(--input-border-focus-color);
-
-    a {
-      color: var(--input-border-focus-color);
-    }
-
-    &:hover {
-      border-color: var(--input-border-focus-color);
-
-      a {
-        color: var(--input-border-focus-color);
-      }
-    }
-  }
-
   .ant-alert-info .ant-alert-icon {
-    color: var(--blue-color);
+    color: var(--color-primary);
   }
 
   // Fix button color
