--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -10,6 +10,7 @@
 @import "antd-typography.less";
 @import "antd-drawer.less";
 @import "antd-breadcrumbs.less";
+@import "antd-pagination.less";
 
 // Fix wrong flex direction of main layout.
 .ant-layout.ant-layout-has-sider {
