Add squire editor

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -83,6 +83,9 @@
   --column-tag-color: #9626ae;
   --plural-tag-color: #0035ff;
   --avatar-color: #9626ae;
+
+  // editor
+  --toolbar-action-active-background-color: var(--primary-light-color);
 }
 
 .dark-theme {
