Improve html editor styling

--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -51,9 +51,12 @@
       }
     }
 
-    // Hide the margin of the last <p> in HTML key translations.
-    p:last-child {
-      margin-bottom: 0;
+    ul, ol, p {
+      margin-bottom: 16px !important;
+
+      &:last-child {
+        margin-bottom: 0 !important;
+      }
     }
   }
 
