Improve styling, fix bug where organization edit is enabled even if user has no permissions

--- a/app/assets/stylesheets/externals/antd-input.less
+++ b/app/assets/stylesheets/externals/antd-input.less
@@ -6,11 +6,13 @@
   .ant-input:hover,
   .ant-input-search .ant-input:hover,
   .ant-input-affix-wrapper:hover,
-  .ant-input-search .ant-input-search-button.ant-btn:hover {
+  .ant-input-search .ant-input-search-button.ant-btn:hover,
+  .ant-picker:hover {
     border-color: var(--input-border-hover-color) !important;
   }
 
-  .ant-input[disabled]:hover {
+  .ant-input[disabled]:hover,
+  .ant-picker[disabled]:hover {
     border-color: var(--input-border-color) !important;
   }
 
@@ -20,7 +22,8 @@
   .ant-input-focused,
   .ant-input-affix-wrapper:focus,
   .ant-input-affix-wrapper-focused,
-  .ant-input-search .ant-input-search-button.ant-btn:focus {
+  .ant-input-search .ant-input-search-button.ant-btn:focus,
+  .ant-picker-focused {
     border-color: var(--input-border-focus-color) !important;
   }
 
