--- a/app/assets/stylesheets/externals/antd-pagination.less
+++ b/app/assets/stylesheets/externals/antd-pagination.less
@@ -3,7 +3,7 @@
 .light-theme {
   .ant-pagination-item {
     a {
-      color: rgba(255, 255, 255, 0.65);
+      color: var(--pagination-color);
     }
 
     &:hover,
