--- a/app/assets/stylesheets/externals/antd-picker.less
+++ b/app/assets/stylesheets/externals/antd-picker.less
@@ -4,4 +4,24 @@
   .ant-picker-footer {
     border-top: 0;
   }
+
+  .ant-picker-panel-container {
+    background: var(--background-color);
+  }
+
+  .ant-picker-today-btn {
+    color: var(--a-link);
+  }
+
+  .ant-picker-today-btn:hover {
+    color: var(--a-link-hover);
+  }
+
+  .ant-picker-panel-container .ant-picker-panel {
+    border: 0;
+  }
+
+  .ant-picker-header-view button:hover {
+    color: var(--a-link-hover);
+  }
 }
