--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -11,6 +11,9 @@
 @import "antd-drawer.less";
 @import "antd-breadcrumbs.less";
 @import "antd-pagination.less";
+@import "antd-select.less";
+@import "antd-picker.less";
+@import "antd-tooltip.less";
 
 // Fix wrong flex direction of main layout.
 .ant-layout.ant-layout-has-sider {
