Improve sidebar styling

--- a/app/assets/stylesheets/externals/antd-menu.less
+++ b/app/assets/stylesheets/externals/antd-menu.less
@@ -5,7 +5,7 @@
   .ant-menu-vertical-left .ant-menu-item:after,
   .ant-menu-vertical-right .ant-menu-item:after,
   .ant-menu-inline .ant-menu-item:after {
-    border-right-color: var(--main-sidebar-border-color);
+    border-right-color: var(--main-sidebar-indicator-color);
   }
 
   .ant-menu-submenu > .ant-menu {
@@ -23,6 +23,7 @@
   .ant-menu-item-selected > a,
   .ant-menu-item-selected > a:hover {
     color: var(--main-sidebar-active-color);
+    font-weight: bold;
   }
 
   .ant-menu-item-selected {
