Add missing presence checker

--- a/app/assets/stylesheets/externals/antd-alert.less
+++ b/app/assets/stylesheets/externals/antd-alert.less
@@ -17,4 +17,13 @@
   .ant-alert-info .ant-alert-icon {
     color: var(--alert-icon-color);
   }
+
+  .ant-alert-warning {
+    background: var(--alert-warning-background-color);
+    border: 1px solid var(--alert-warning-border-color);
+  }
+
+  .ant-alert-warning .ant-alert-icon {
+    color: var(--alert-icon-color);
+  }
 }
