Fix tooltip styling

--- a/app/assets/stylesheets/externals/antd-tooltip.less
+++ b/app/assets/stylesheets/externals/antd-tooltip.less
@@ -4,4 +4,8 @@
   .ant-tooltip-inner {
     background: var(--tooltip-background-color);
   }
+
+  .ant-tooltip-arrow-content {
+    background: var(--tooltip-background-color);
+  }
 }
